src/components/Marquee/Marquee.module.scss
.slidingText {
  position: relative;
  top: 0;
  border: 2px solid black;
  border-left: 0;
  border-right: 0;
  border-bottom: 0;
  width: 100vw;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  white-space: nowrap;
  z-index: -1;

}

.slidingText2 {
  position: relative;
  top: 0;
  border: 2px solid black;
  border-left: 0;
  border-right: 0;
  border-bottom: 2px solid black;
  width: 100vw;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  white-space: nowrap;
  z-index: -1;
}

.container{
  display: flex;
  gap: 50px;
}


.marquee {
  border: 2px solid black;
  border-left: 0 ;
  border-right: 0 ;
  white-space: nowrap;
  overflow: hidden;
  z-index: 3;
}

.child {
  display: flex;
  flex-direction: row;
  
  &:hover > h1 {
    color: blue;
  }
}

.nest {
  padding-top: 20px;
  padding-bottom: 20px;
  background-color: #DAC0A3;

  transition: background 100ms linear;

  &:hover {
    background: #EADBC8;
  }
}


.text {
  color: #102C57;
}

